k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  namespace: marquee
  labels:
    app: marquee-client
  name: marquee-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: marquee-client
  template:
    metadata:
      labels:
        app: marquee-client
    spec:
      containers:
      - image: harbor.high.am/danhigham/marquee-client
        name: marquee-client
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: regcred
