k8s/marquee.service.yml
apiVersion: v1
kind: Service
metadata:
  name: marquee-http
spec:
  selector:
    app: marquee-client
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
