k8s/rabbitmq.nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: ampq-nodeport
  namespace: rabbitmq
spec:
  type: NodePort
  ports:
  - name: ampq
    port: 5672
    protocol: TCP
    targetPort: 5672
  selector:
    app: rabbitmq
