k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: marquee-client
  name: marquee-client
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: marquee-client
