k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
    nginx.org/websocket-services: "marquee-client"
    nginx.ingress.kubernetes.io/whitelist-source-range: "50.53.68.241, 192.168.1.0/24, 10.200.82.0"
  labels:
    app: "marquee-client"
  name: "marquee-client"
  namespace: marquee
spec:
  rules:
  - host: hello.high.am
    http:
      paths:
      - backend:
          serviceName: marquee-http
          servicePort: 8080
  tls:
  - hosts:
    - hello.high.am
    secretName: marquee-tls
